[package]
name = "rswinthings"
version = "0.0.1"
authors = ["Matthew Seyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
clap = "2"
log = "0.4"
fern = "0.5"
time = "0.1"
chrono = "0.4"
quick-xml = "0.16"
minidom = "0.11"
serde = "1.0"
serde_json = "1.0"

[dependencies.winapi]
version = "0.3"
features = [
"winevt",
"winnt",
"minwindef",
"errhandlingapi",
"winerror",
"guiddef"
]

[dependencies.win-event-log]
git = "https://github.com/rustysec/win-event-log-rs"
features = ["subscriber", "xml"]
