[package]
name = "rswinthings"
version = "0.3.0"
authors = ["Matthew Seyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
regex = "1"
clap = "2"
log = "0.4"
fern = "0.5"
time = "0.1"
chrono = "0.4"
quick-xml = "0.16"
minidom = "0.11"
serde_json = "1.0"
rpassword = "4.0"
byteorder = "1.3"

[dependencies.treediff]
version = "*"
features = ["with-serde-json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.winapi]
version = "0.3.8"
features = [
"winioctl",
"ioapiset",
"winevt",
"winnt",
"minwindef",
"errhandlingapi",
"winerror",
"guiddef",
"evntrace",
"wmistr",
"impl-default",
"impl-debug"
]

[dependencies.mft]
version = "0.5"