[package]
name = "rswinthings"
version = "0.4.0"
authors = ["Matthew Seyer"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = "0.4"
regex = "1"
clap = "2"
log = "0.4"
fern = "0.5"
time = "0.1"
lru = "0.1.17"
chrono = "0.4"
quick-xml = "0.16"
minidom = "0.11"
serde_json = "1.0"
rpassword = "4.0"
byteorder = "1.3"
winstructs = "0.3.0"
widestring = "0.4"
crossbeam = "*"

[dependencies.treediff]
version = "*"
features = ["with-serde-json"]

[dependencies.serde]
version = "1.0"
features = ["derive"]

[dependencies.winapi]
git = "https://github.com/forensicmatt/winapi-rs"
branch = "etw"
features = [
"debug",
"namedpipeapi",
"winioctl",
"ioapiset",
"winevt",
"winnt",
"winbase",
"minwindef",
"errhandlingapi",
"winerror",
"fileapi",
"guiddef",
"evntrace",
"wmistr",
"handleapi",
"eventtrace",
"impl-default"
]

[dependencies.rusty_usn]
git = "https://github.com/forensicmatt/RustyUsn.git"
branch = "master"

[dependencies.mft]
version = "0.5"

[[bin]]
name = "etl_consumer"
path = "src/bin/etl_tools/etl_consumer.rs"